# locationTGbot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_NOTES.md  Dockerfile  Dockerfile.railway  Procfile  README.md  app_minimal.py  main_simple.py  nixpacks.toml  nixpacks.toml.backup  package.json  pyproject.toml  railway.json  railway.json.backup  railway.minimal.toml  railway.simple.toml  railway.toml  railway.toml.backup  requirements.txt  simple_app.py  start.sh  test_bot.py
.cursor/rules/: file_structure_document.mdc  tech_stack_document.mdc
.github/workflows/: ci.yml
bot/: main.py
bot/handlers/: location.py
bot/services/: openai_client.py  rate_limiter.py
config_backup/: settings.py
docs/: PRD.md  implementation_plan.mdc
tests/: conftest.py  test_openai_client.py  test_rate_limiter.py
